# PLATT2-Override-Software

./: LICENSE  README.md
PLATT2-Override/: project.pros
PLATT2-Override/include/platt2/: EAllianceConfig.hpp  EAutonConfig.hpp  EDriverConfig.hpp  ERobotConfig.hpp  MatchController.hpp  helperFunctions.h
PLATT2-Override/include/platt2/auton/: IAuton.hpp  PinkCompAuton.hpp  PinkSkillsAuton.hpp  PurpleCompAuton.hpp  PurpleSkillsAuton.hpp
PLATT2-Override/include/platt2/config/: IConfig.hpp  PinkConfig.hpp  PurpleConfig.hpp
PLATT2-Override/include/platt2/hal/: MotorGroup.hpp  OpticalTrackingSensor.hpp  TrackingWheel.hpp
PLATT2-Override/include/platt2/menu/: menu.hpp
PLATT2-Override/include/platt2/profiles/: DriverProfile.hpp  JonProfile.hpp  QuinnProfile.hpp
PLATT2-Override/include/platt2/robot/: Robot.hpp
PLATT2-Override/include/platt2/robot/pid/: pid.hpp
PLATT2-Override/include/platt2/robot/subsystems/colorSort/: colorSort.hpp
PLATT2-Override/src/: main.cpp
PLATT2-Override/src/platt2/: MatchController.cpp
PLATT2-Override/src/platt2/auton/: PinkCompAuton.cpp  PinkSkillsAuton.cpp  PurpleCompAuton.cpp  PurpleSkillsAuton.cpp
PLATT2-Override/src/platt2/config/: PinkConfig.cpp  PurpleConfig.cpp
PLATT2-Override/src/platt2/hal/: MotorGroup.cpp  OpticalTrackingSensor.cpp  TrackingWheel.cpp
PLATT2-Override/src/platt2/menu/: menu.cpp
PLATT2-Override/src/platt2/robot/: Robot.cpp
PLATT2-Override/src/platt2/robot/pid/: pid.cpp
PLATT2-Peripheral/PI-program/: CMakeLists.txt
PLATT2-Peripheral/PI-program/src/: main.cpp
(+21 files in other folders)
